# lucid-mcp

./: .gitignore  CLAUDE.md  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml
lucid_skill/: __main__.py  cli.py  config.py  server.py  startup.py  types.py
lucid_skill/catalog/: profiler.py  schema.py  store.py
lucid_skill/connectors/: base.py  csv_conn.py  excel_conn.py  mysql_conn.py  postgres_conn.py
lucid_skill/discovery/: domains.py  joins.py
lucid_skill/query/: engine.py  formatter.py  router.py  safety.py
lucid_skill/semantic/: embedder.py  hybrid.py  index.py  layer.py  search.py
lucid_skill/tools/: connect.py  describe.py  discovery.py  overview.py  profile.py  query.py  search.py  semantic.py
references/: commands.md  json-schema.md  workflow.md
semantic_store/csv_orders_csv/: orders.yaml
src/: cli.ts  config.ts  index.ts  server.ts  types.ts
src/catalog/: store.ts
src/connectors/: postgres.ts
src/discovery/: joins.ts
src/query/: router.ts
src/semantic/: embedder.ts  index.ts  layer.ts  search.ts
src/tools/: connect.ts  discovery.ts  query.ts  search.ts  semantic.ts
tests/: e2e.test.ts  test_catalog.py  test_config.py  test_csv_connect.py  test_engine.py  test_safety.py
tests/datasets/: README.md
tests/datasets/cross-source-a/: shop_orders.csv
tests/datasets/cross-source-b/: shop_customers.csv
tests/datasets/ecommerce/: customers.csv  order_items.csv  orders.csv  products.csv
tests/datasets/hr/: departments.csv  employees.csv
