[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucid-skill"
version = "2.0.0"
description = "AI-native data analysis skill. Connect Excel/CSV/MySQL/PostgreSQL, understand business semantics, query with natural language."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
db = ["psycopg2-binary", "mysql-connector-python"]
embedding = ["sentence-transformers"]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.scripts]
lucid-skill = "lucid_skill.cli:main"

[tool.setuptools.packages.find]
include = ["lucid_skill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
